--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <h1>CanCan Test</h1>
 <div>
-  <%= form_tag(:controller => 'home', :action => 'index') do %>
+  <%= form_tag(:controller => 'home', :action => 'search') do %>
     <div class="field">
       Username:<br />
       <input type="text" name="username" />
